# evolutionary-alignment

./: .gitignore  README.md  main.py  pyproject.toml
conciseness/: conciseness_eval.py  report.py
conciseness/ES/: es_fine-tuning_conciseness_iid.py  eval.sh
conciseness/ES/evals/: alpha0.0005_sigma0.001.json  alpha0.0005_sigma0.010.json  alpha0.0015_sigma0.001.json  (+3 more)
conciseness/GRPO/: eval.sh  grpo_conciseness_trl.yaml  report.py  run.sh  train_grpo_conciseness_trl.py  train_grpo_conciseness_trl_v2.py
configs/sampling_analysis_v1/: perturbation_sampling.yaml  perturbation_sampling_low.yaml  plot_comparison.yaml  plot_perturbation.yaml  plot_temperature.yaml  plot_temperature_low.yaml  solve_explorer.yaml  temperature_sampling.yaml  temperature_sampling_low.yaml
countdown/: countdown_task.py  es_accl_static.py  eval.sh  eval_countdown_vllm.py  run.sh
countdown/ES/: es_accl_static.py  es_fine-tuning_countdown_iid.py  run.sh
countdown/GRPO/: grpo_countdown_trl.yaml  run_grpo_countdown_sweep.sh  train_grpo_countdown_trl.py
docs/: conciseness_eval_comparison.md  neurosymbolic_es.md  research_context.md  structure.md
math/: math_eval.py  math_verifier.py
math/ES/: es-fine-tuning_math.py  eval.sh  reconstruct_checkpoint.py  run.sh
scripts/sampling_analysis_v1/: perturbation_sampling.sh  perturbation_sampling_low.sh  plot_comparison.sh  plot_perturbation.sh  plot_temperature.sh  plot_temperature_low.sh  solve_explorer.sh  temperature_sampling.sh  temperature_sampling_low.sh
src/sampling_analysis_v1/: utils.py  worker_extension.py
utils/: worker_extn.py
(+16 files in other folders)
